samples/_failures_safe/1761597611_8bdac2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ff72328a.c: In function ‘main’:
./samples/SAFE/__tmp_ff72328a.c:155:25: error: missing terminating " character
  155 |         fprintf(stderr, "
      |                         ^
./samples/SAFE/__tmp_ff72328a.c:155:9: error: expected expression at end of input
  155 |         fprintf(stderr, "
      |         ^~~~~~~
./samples/SAFE/__tmp_ff72328a.c:155:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ff72328a.c:155:9: error: expected declaration or statement at end of input
